--- a/oldschool-calculator/Base.lproj/Main.storyboard
+++ b/oldschool-calculator/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="oldschool_calculator" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,60 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="space-bg" translatesAutoresizingMaskIntoConstraints="NO" id="iSf-3E-ulg">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="iSf-3E-ulg" secondAttribute="height" multiplier="1:1" id="Fyu-mQ-cod"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="J6t-nE-CN1">
+                                <rect key="frame" x="187" y="76" width="249" height="413"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="counter" translatesAutoresizingMaskIntoConstraints="NO" id="ZII-cT-nnN">
+                                        <rect key="frame" x="0.0" y="0.0" width="249" height="64"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="227" id="1UN-su-Vx5"/>
+                                            <constraint firstAttribute="height" constant="64" id="GAh-ht-8x1"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="64" id="duV-qz-u51"/>
+                                            <constraint firstAttribute="width" constant="270" id="ytM-Ec-Cm7"/>
+                                        </constraints>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="1UN-su-Vx5"/>
+                                                <exclude reference="ytM-Ec-Cm7"/>
+                                            </mask>
+                                        </variation>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backpanel" translatesAutoresizingMaskIntoConstraints="NO" id="LmG-ME-X7M">
+                                        <rect key="frame" x="0.0" y="64" width="249" height="349"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="349" id="3PH-at-K36"/>
+                                            <constraint firstAttribute="width" constant="249" id="SO0-Rh-Mmx"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="iSf-3E-ulg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="0G9-FE-5dT"/>
+                            <constraint firstItem="iSf-3E-ulg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="0oz-gJ-91K"/>
+                            <constraint firstItem="J6t-nE-CN1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3Ud-ef-YCz"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="iSf-3E-ulg" secondAttribute="bottom" id="iIq-Bq-TDv"/>
+                            <constraint firstAttribute="trailing" secondItem="iSf-3E-ulg" secondAttribute="trailing" id="jni-L2-iIz"/>
+                            <constraint firstItem="J6t-nE-CN1" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="muL-Tf-kRU"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="332" y="377"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="backpanel" width="620" height="938"/>
+        <image name="counter" width="516" height="133"/>
+        <image name="space-bg" width="988" height="946"/>
+    </resources>
 </document>
