--- a/oldschool-calculator/Base.lproj/LaunchScreen.storyboard
+++ b/oldschool-calculator/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,13 +18,59 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchbg" translatesAutoresizingMaskIntoConstraints="NO" id="Zc5-Zf-IeE">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Retro-Calc" translatesAutoresizingMaskIntoConstraints="NO" id="fAN-Fs-Pf9">
+                                <rect key="frame" x="20" y="20" width="560" height="111"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchground" translatesAutoresizingMaskIntoConstraints="NO" id="GrK-lt-ETu">
+                                <rect key="frame" x="0.0" y="375" width="600" height="225"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="robot" translatesAutoresizingMaskIntoConstraints="NO" id="GN2-xn-kZu">
+                                <rect key="frame" x="40" y="139" width="520" height="277.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="jXz-hZ-No9"/>
+                                    <constraint firstAttribute="width" secondItem="GN2-xn-kZu" secondAttribute="height" multiplier="15:8" id="oDd-VZ-AIx"/>
+                                    <constraint firstAttribute="height" constant="128" id="xPC-PV-pcT"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="jXz-hZ-No9"/>
+                                        <exclude reference="xPC-PV-pcT"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Zc5-Zf-IeE" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="6Eb-Vx-4gt"/>
+                            <constraint firstItem="Zc5-Zf-IeE" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="EeW-vJ-psc"/>
+                            <constraint firstItem="GN2-xn-kZu" firstAttribute="top" secondItem="fAN-Fs-Pf9" secondAttribute="bottom" constant="8" id="F1F-9I-mq4"/>
+                            <constraint firstItem="fAN-Fs-Pf9" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailingMargin" id="LrG-P8-Ime"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="GN2-xn-kZu" secondAttribute="trailing" constant="20" id="Mpd-eX-Eku"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="Zc5-Zf-IeE" secondAttribute="bottom" id="coc-Sk-VgR"/>
+                            <constraint firstAttribute="trailing" secondItem="Zc5-Zf-IeE" secondAttribute="trailing" id="frb-zH-aaX"/>
+                            <constraint firstItem="GN2-xn-kZu" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="20" id="guC-s7-2XS"/>
+                            <constraint firstItem="GrK-lt-ETu" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="jfS-ED-f78"/>
+                            <constraint firstItem="fAN-Fs-Pf9" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="keK-Pb-Fh8"/>
+                            <constraint firstItem="fAN-Fs-Pf9" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="rxr-qv-z0S"/>
+                            <constraint firstItem="GN2-xn-kZu" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="vBi-Ni-1eg"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="GrK-lt-ETu" secondAttribute="bottom" id="zMy-9e-MMv"/>
+                            <constraint firstAttribute="trailing" secondItem="GrK-lt-ETu" secondAttribute="trailing" id="zuK-2a-I2I"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="-149" y="215"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Retro-Calc" width="755" height="111"/>
+        <image name="launchbg" width="1433" height="957"/>
+        <image name="launchground" width="999" height="225"/>
+        <image name="robot" width="786" height="402"/>
+    </resources>
 </document>
