Added clear button functionality

--- a/oldschool-calculator/Base.lproj/Main.storyboard
+++ b/oldschool-calculator/Base.lproj/Main.storyboard
@@ -263,6 +263,17 @@
                                 <fontDescription key="fontDescription" name="Minecraft" family="Minecraft" pointSize="30"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xpb-Ra-uqT">
+                                <rect key="frame" x="188" y="515" width="225" height="77"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="77" id="mxG-aA-S1n"/>
+                                    <constraint firstAttribute="width" constant="225" id="tSL-2j-5uQ"/>
+                                </constraints>
+                                <state key="normal" image="clear"/>
+                                <connections>
+                                    <action selector="onClearPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="apJ-EB-8yO"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -273,11 +284,14 @@
                             <constraint firstItem="NaD-Eh-0t9" firstAttribute="centerX" secondItem="J6t-nE-CN1" secondAttribute="centerX" id="6Hk-Gj-xrx"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Yzn-7h-jI0" secondAttribute="bottom" id="E0j-Th-zzK"/>
                             <constraint firstItem="lYF-jv-Mrw" firstAttribute="top" secondItem="J6t-nE-CN1" secondAttribute="top" constant="20" id="Ifu-Z1-f8J"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Xpb-Ra-uqT" secondAttribute="bottom" constant="8" id="KMg-px-2Ef"/>
+                            <constraint firstItem="Xpb-Ra-uqT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="N1E-Nh-Ti1"/>
                             <constraint firstItem="J6t-nE-CN1" firstAttribute="trailing" secondItem="lYF-jv-Mrw" secondAttribute="trailing" constant="10" id="TWb-Dg-jQe"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="iSf-3E-ulg" secondAttribute="bottom" id="iIq-Bq-TDv"/>
                             <constraint firstAttribute="trailing" secondItem="iSf-3E-ulg" secondAttribute="trailing" id="jni-L2-iIz"/>
                             <constraint firstItem="J6t-nE-CN1" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="muL-Tf-kRU"/>
                             <constraint firstAttribute="trailing" secondItem="Yzn-7h-jI0" secondAttribute="trailing" id="sSi-T8-VP0"/>
+                            <constraint firstItem="Xpb-Ra-uqT" firstAttribute="top" secondItem="J6t-nE-CN1" secondAttribute="bottom" constant="8" id="vX8-ik-eGT"/>
                             <constraint firstItem="Yzn-7h-jI0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="ywI-8Z-O9A"/>
                         </constraints>
                     </view>
@@ -303,6 +317,7 @@
         <image name="9" width="111" height="114"/>
         <image name="add" width="111" height="114"/>
         <image name="backpanel" width="620" height="938"/>
+        <image name="clear" width="333" height="114"/>
         <image name="counter" width="516" height="133"/>
         <image name="divide" width="111" height="114"/>
         <image name="equal" width="111" height="114"/>
